--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,11 +7,19 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-<%= yield %>
+
+	<% if flash[:notice] %>
+		<div class="notice"><%= flash[:notice] %></div>
+	<% end %>
 
 <div id="twitter_sign_in">	
 <%= link_to "Sign in With Twitter", "/auth/twitter" %>
 </div>
 
+<% yield %>
+
 </body>
 </html>
+
+
+
