--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,13 +7,20 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
+<!-- Sign in Notice -->
 	<% if flash[:notice] %>
-		<div class="notice"><%= flash[:notice] %></div>
+		<div class="notice">
+			<%= flash[:notice] %>
+		</div>	
 	<% end %>
-
-<div id="twitter_sign_in">	
-<%= link_to "Sign in With Twitter", "/auth/twitter" %>
+<!-- Sign In or Welcome Message / Sign Out-->
+<div id="user_nav">
+	<% if current_user %>
+		Welcome, <%= current_user.name %>! 
+		<%= link_to "Sign Out", signout_path %>
+	<%else%>
+		<%= link_to "Sign in With Twitter", "/auth/twitter" %>
+	<% end %>
 </div>
 
 <% yield %>
