working on seeding db and users controller

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -26,7 +26,7 @@
 		<div id="circle" name="user2"></div>
 	</div>
 
-
+<div><%= @user.inspect %> </div>
 
 		
 		<section class="buttons" id="start">
