--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,6 +27,17 @@ Welcome, <%= current_user.name %>!
 <%= yield %>
 
 
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.js"></script>
+    <script src="https://cdn.socket.io/socket.io-1.3.2.js"></script>
+    <script>
+    var socket = io.connect('http://localhost:4000');
+    socket.on('stream', function(tweet){
+      $('#tweetd').append("<li>" + tweet + "</li>");
+    });
+    </script>
+    <ul id="tweetd"></ul>
+
+
 
 <script type="text/javascript" src="/application.js" />
 </body>
