--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -25,7 +25,17 @@
 		<section class="buttons" id="start">
 			<div class="buttons">
 				<button class="ticker1" name="ticker1"> <a href="#">Ticker 1</a></button>
-				<button class="startbutton" name="startbutton"> <a href="#">Start!</a></button>
+				 <button id="startbutton" name="startbutton"><h2 id="timer">Start!</h2></button>
+ <!--  <div class="controls">
+
+  </div> -->
 				<button class="ticker2" name="ticker2"> <a href="#">Ticker 2</a></button>
 			</div>
 		</section>
+
+
+
+
+  
+
+
