added profile pic display

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,7 @@
 
 	<% if current_user %>
 Welcome, <%= current_user.name %>! 
+<img id="profile-pic" src="<%= current_user.pic%>"/>
 	<% end %>
 
 <%= yield %>
