--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -13,7 +13,7 @@
 				<% if current_user %>
 					<%= link_to "Sign Out", signout_path %>
 				<%else%>
-					<%= link_to "Sign in With Twitter", "/auth/twitter" %>
+					<%= link_to image_tag("https://g.twimg.com/dev/sites/default/files/images_documentation/sign-in-with-twitter-gray.png"), "/auth/twitter" %>
 				<% end %>
 			</li>
 
