--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
 <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
 <%= javascript_include_tag 'rebecca' %>
 <%= javascript_include_tag 'computer'%>
-
+<%= javascript_include_tag 'toggle' %>
 </body>
 </html>
 
