--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,5 +1,9 @@
 <div class="banner">
-<h1>TwitterBURST!</h1>
+	<h1>TwitterBURST!</h1>
+</div>
+	<div id="bird"> <img> <%= image_tag 'Twitter_logo_blue.png' %> </img>
+	</div>
+<div id="bird2"> <img> <%= image_tag 'Twitter_logo_blue.png' %> </img>
 </div>
 
 <div class="notice-container">
@@ -34,17 +38,21 @@
 	</div>
 
 	<div id="leaderboard" style="display: none">
-		<%= @leaderboards.inspect %>
-
-
+		<table>
+		<tr><th>Name</th><th>Bursts</th></tr>
+		<tr><td><% @leaders.each do |leader| %>
+		<%= leader.user.name %></td>
+		<td><%= leader.win_count %></td></tr>
+		<% end %>
+		</table>
 
 	</div>
 	<div id="stats" style="display: none">
 		<table>
-		<tr><td>Name: </td><td><%= @user.name %></td></tr>
-		<tr><td>Wins: </td><td><%= @wins %></td></tr>
-		<tr><td>Losses: </td><td><%= @losses %></td></tr>
-		<tr><td>Ties: </td><td><%= @ties %></td></tr>
+		<tr><th>Name: </td><td><%= @user.name %></td></tr>
+		<tr><th>Wins: </td><td><%= @wins %></td></tr>
+		<tr><th>Losses: </td><td><%= @losses %></td></tr>
+		<tr><th>Ties: </td><td><%= @ties %></td></tr>
 		</table>
 	</div>
 
