sung and rebecca additions

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,7 @@
 <%= javascript_include_tag 'rebecca' %>
 <%= javascript_include_tag 'computer'%>
 <%= javascript_include_tag 'toggle' %>
+<%= javascript_include_tag 'playerscore' %>
 </body>
 </html>
 
