--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,7 +13,6 @@
  *= require_tree .
  *= require_self
  */
-
 .container {
     width: 100%
     position: absolute;
@@ -24,12 +23,17 @@
   width: 100%;
   margin: 0;
   padding: 0;
-  background: #CCFFFF;
+  background: #c0deed;
  }
 
  h1 {
+  /*font-family: 'Bangers', cursive;*/
   font-family: 'Montserrat Subrayada', sans-serif;
+  /*font-family: 'Russo One', sans-serif;
+  /*font-family: 'Monoton', cursive;*/
+  /*font-family: 'Archivo Black', sans-serif;*/
   font-size: 80px;
+  color: #0084b4;
   padding-bottom: 20px;
  }
 
@@ -38,7 +42,6 @@
  }
 
  .banner {
-  background-color: yellow;
   padding-top: 1px;
   display: inline-block;
   clear: fix;
@@ -46,10 +49,9 @@
 
 .circle-set {
     margin: auto;
-    height: 400px;
+    height: 500px;
     display: block;
 }
-
 .circle {
     background: #f00;
     width: 200px;
@@ -58,6 +60,7 @@
     margin: 20px;
     display: inline-block;
 }
+
 
 .clear {
     overflow: auto;
@@ -68,6 +71,10 @@
   float: left;
   text-align: left;
   font-family: "Avenir";
+  font-size: 18px;
+  text-align:center;
+  padding:1em;
+  border-right:1px solid #fff;
  }
 
 
@@ -83,11 +90,11 @@ button {
 
 
 .ticker1 {
-  background: #D1D0CE;
+  background: #00aced;
 }
 
 .ticker2 {
-  background: #D1D0CE;
+  background: #00aced;
 }
 
 .startbutton {
@@ -96,6 +103,23 @@ button {
 
 .hash-tag {
     padding-top: 4.5em;
+}
+
+table {
+  margin: 0 auto;
+  font-family: "Avenir";
+}
+
+table, th, td {
+  border: 1px solid black;
+}
+
+th {
+  background-color: #00aced;
+}
+
+td {
+  background-color: #ffffff;
 }
 
 li {
@@ -117,24 +141,16 @@ a {
   text-align: center;
 }
 
-table {
-  margin: 0 auto;
-  font-family: "Avenir";
-}
-
-table, td{
-  border: 1px solid black;
-}
 
 #leaderboard{
   position: absolute;
-  top: 40%;
+  top: 50%;
   left: 20%;
 }
 
 #stats{
   position: absolute;
-  top: 40%;
+  top: 50%;
   left: 75%;
 }
 
@@ -142,7 +158,8 @@ table, td{
   height: 100px;
   width: 200px;
   margin-left: 20px;
-  margin-top: 20px;
+  margin-top: 30px;
+  top: 10%;
   display: inline-block;
   float: left;
 }
@@ -155,8 +172,8 @@ table, td{
 #bird2 {
   height: 100px;
   width: 200px;
-  margin-left: 20px;
-  margin-top: 20px;
+  margin-right: 20px;
+  margin-top: 30px;
   display: inline-block;
   float: right;
 }
