--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -57,23 +57,44 @@
 	</div>
 
 	<div class="circle-set clear">
-		<div class="circle" id="circle1" name="user1">
-			<p class="hash-tag" id="hash1">
-			</p>
-		</div>
+		
+	<div class="dual-circle">
 
-		<div class="circle" id="circle2" name="user2">
-			<p class="hash-tag" id="hash2">
-			</p>
-		</div>
-
-		<section class="buttons" id="start">
-			<div class="buttons">
-				<button class="ticker1"> <a href="#">Ticker 1</a></button>
-				<button id="start-button">Start!</button>
-				<button class="ticker2"> <a href="#">Ticker 2</a></button>
+		<div class="player">
+			<div class="score" >
+				<form>
+				<input id="score1" type="text" placeholder="score">
+				<input type="submit" id="submit1">
+				</form>
 			</div>
-		</section>
+
+			<div class="circle" id="circle1" name="user1">
+				<p class="hash-tag" id="hash1">
+				</p>
+			</div>
+		</div>
+
+		<div class="player">
+			<div class="score">
+				<form>
+				<input id="score2" type="text" placeholder="score">
+				<input type="submit" id="submit2">
+				</form>
+			</div>
+
+			<div class="circle" id="circle2" name="user2">
+				<p class="hash-tag" id="hash2">
+				</p>
+			</div>
+		</div>
+	</div>
+
+	<div class="buttons clear" id="start">
+		<div class="buttons">
+			<button class="ticker" id="ticker1"> 0 </button>
+			<button id="start-button">Start!</button>		<button class="ticker" id="ticker2"> 0 </button>
+		</div>
+	</div>
 	</div>
 </div>
 
