--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -38,22 +38,14 @@
 	</div>
 
 	<div id="leaderboard" style="display: none">
-		<table>
-		<tr><th>Name</th><th>Bursts</th></tr>
-		<tr><td><% @leaders.each do |leader| %>
-		<%= leader.user.name %></td>
-		<td><%= leader.win_count %></td></tr>
-		<% end %>
-		</table>
+		<ol id="leaders">
+
+		</ol>
 
 	</div>
 	<div id="stats" style="display: none">
-		<table>
-		<tr><th>Name: </td><td><%= @user.name %></td></tr>
-		<tr><th>Wins: </td><td><%= @wins %></td></tr>
-		<tr><th>Losses: </td><td><%= @losses %></td></tr>
-		<tr><th>Ties: </td><td><%= @ties %></td></tr>
-		</table>
+		<ul id="my_stats">
+		</ul>
 	</div>
 
 	<div class="circle-set clear">
