--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
   <%= csrf_meta_tags %>
 <link href='http://fonts.googleapis.com/css?family=Montserrat+Subrayada:700' rel='stylesheet' type='text/css'>
+<script src="https://cdn.socket.io/socket.io-1.3.2.js"></script>
 
 </head>
 <body>
@@ -16,8 +17,8 @@
 <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
 <%= javascript_include_tag 'rebecca' %>
 <%= javascript_include_tag 'computer'%>
-<%= javascript_include_tag 'toggle' %>
 <%= javascript_include_tag 'playerscore' %>
+<%= javascript_include_tag 'nodeapp' %>
 </body>
 </html>
 
