--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -61,6 +61,7 @@
 				<h3 id='first-hashtag-result'></h3>
 				<button id="ticker-one">0</button>
 				<button id="start-button">Start!</button>
+				<button id="reset-button">Reset!</button>
 				<button id="ticker-two">0</button>
 			</div>
 			<div class='footer'></div>
