remove default words

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -49,10 +49,10 @@
 
 			<div class='tweet-bodies'>
 				<div class='tweet-one'>
-					<h3 id='first-hashtag-result'>hello</h3>
+					<h3 id='first-hashtag-result'></h3>
 				</div>
 				<div class='tweet-two'>
-					<h3 id='second-hashtag-result'>goodbye</h3>
+					<h3 id='second-hashtag-result'></h3>
 				</div>
 			</div>
 
