--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -48,13 +48,28 @@ body{
   background-color: #565051;
   text-align: center;
   font-family: "Avenir";
+  font-weight: 600;
   font-size: 18px;
   padding-top: 10em;
   padding-right: 20px;
+  color: white;
 }
 
 .nav ul{
   list-style-type: none;
+}
+
+.left-container img{
+  height: 100px;
+  width: auto;
+}
+
+#leaderboard {
+  color: white;
+}
+
+#stats {
+  color: white;
 }
 
 /*HEADER*/
