--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -11,7 +11,10 @@
 			<li id="your_stats">Your Stats</li>
 			<li id="user_nav"><%= link_to "Sign Out", signout_path %></li>
 		<%else%>
-		<li><%= link_to image_tag("https://g.twimg.com/dev/sites/default/files/images_documentation/sign-in-with-twitter-gray.png"), "/auth/twitter" %></li>
+		<li><%= link_to "Sign in with Twitter", "/auth/twitter" %></li>
+
+<!-- image_tag("https://g.twimg.com/dev/sites/default/files/images_documentation/sign-in-with-twitter-gray.png") -->
+
 		<% end %>
 		</ul>
 	</div>
